--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="index.css">
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
     <div>
-        <h1>Bienvenidos a la Materia: Programación Web</h1>
+        <h1 class="custom-title">Bienvenidos a la Materia: Programación Web</h1>
         <p>Estamos programando una página web. Esto es una etiqueta de párrafo</p>
     </div>
     <div>
