--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
-    <div>
+    <!-- <div class="main-div">
         <h1 class="custom-title">Bienvenidos a la Materia: Programación Web</h1>
         <p>Estamos programando una página web. Esto es una etiqueta de párrafo</p>
     </div>
@@ -19,6 +19,17 @@
             <li>Django</li>
             <li>Conceptos Avanzados</li>
         </ul>
+    </div> -->
+    <div class="container">
+        <div class="blue sample-box">
+           <button>A</button>
+        </div>
+        <div class="red sample-box">
+            <button>B</button>
+        </div>
+        <div class="green sample-box">
+            <button>C</button>
+        </div>
     </div>    
     </body>
 </html>
