--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
-    <!-- <div class="main-div">
+    <div class="main-div">
         <h1 class="custom-title">Bienvenidos a la Materia: Programación Web</h1>
         <p>Estamos programando una página web. Esto es una etiqueta de párrafo</p>
     </div>
@@ -19,7 +19,7 @@
             <li>Django</li>
             <li>Conceptos Avanzados</li>
         </ul>
-    </div> -->
+    </div>
     <div class="container">
         <div class="blue sample-box">
            <button>A</button>
