--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
+    <div class="navbar">
+        <h4 class="navbar-element">Inicio</h4>
+        <h4 class="navbar-element">Mi Perfil</h4>
+        <h4 class="navbar-element">Mis Cursos</h4>
+    </div>
     <div class="main-div">
-        <h1 class="custom-title">Bienvenidos a la Materia: Programación Web</h1>
-        <p>Estamos programando una página web. Esto es una etiqueta de párrafo</p>
+        <h1 class="custom-title">Programación Web</h1>
+        <p class="description">Curso de Programación Web de un cuatrimestre de duración.</p>
     </div>
-    <div>
+    <div class="contents">
         <h2>Contenidos</h2>
-        <ul>
-            <li>Introducción</li>
-            <li>Javascript</li>
-            <li>React</li>
-            <li>Django</li>
-            <li>Conceptos Avanzados</li>
-        </ul>
+        <div class="row-image-desc">
+            <img src="pw.jpg" class="picture">
+            <p class="long-desc">
+                En este curso se veran diversos temas vinculados con la programación web como por ejemplo Javascript, CSS, React, Django y algunos otros conceptos avanzados.
+            </p>
+        </div>
+        <h3 class="price">
+            Precio: $1000
+        </h3>
     </div>
-    <div class="container">
-        <div class="blue sample-box">
-           <button>A</button>
-        </div>
-        <div class="red sample-box">
-            <button>B</button>
-        </div>
-        <div class="green sample-box">
-            <button>C</button>
-        </div>
-    </div>    
     </body>
 </html>
