--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <h2>Contenidos</h2>
         <div class="row-image-desc">
             <img src="pw.jpg" class="picture">
-            <p class="long-desc">
+            <p class="long-desc descriptive-text">
                 En este curso se veran diversos temas vinculados con la programación web como por ejemplo Javascript, CSS, React, Django y algunos otros conceptos avanzados.
             </p>
         </div>
-        <h3 class="price">
+        <h3 class="price descriptive-text">
             Precio: $1000
         </h3>
     </div>
