--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
+    <div class="nav-detail"></div>
     <div class="navbar">
         <h4 class="navbar-element">Inicio</h4>
         <h4 class="navbar-element">Mi Perfil</h4>
