--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="main-div">
         <h1 class="custom-title">Programación Web</h1>
-        <p class="description">Curso de Programación Web de un cuatrimestre de duración.</p>
+        <p class="description descriptive-text">Curso de Programación Web de un cuatrimestre de duración.</p>
     </div>
     <div class="contents">
         <h2>Contenidos</h2>
