iconos, hovers y demás

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway|Permanent+Marker">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <Title>Programacion Web - Austral</Title>
     </head>
     <body>
     <div class="nav-detail"></div>
     <div class="navbar">
-        <h4 class="navbar-element">Inicio</h4>
-        <h4 class="navbar-element">Mi Perfil</h4>
-        <h4 class="navbar-element">Mis Cursos</h4>
+        <img src="logo.png">
+        <div class="navbar-things">
+        <div class="navbar-button"><i class="fa fa-home"></i><h4 class="navbar-element">Inicio</h4></div>
+        <div class="navbar-button"><i class="fa fa-user"></i><h4 class="navbar-element">Mi Perfil</h4></div>
+        <div class="navbar-button"><i class="fa fa-book"></i><h4 class="navbar-element">Mis Cursos</h4></div>
+        </div>
     </div>
     <div class="main-div">
         <h1 class="custom-title">Programación Web</h1>
