--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h1 class="custom-title">Programación Web</h1>
         <p class="description descriptive-text">Curso de Programación Web de un cuatrimestre de duración.</p>
     </div>
+    <div class="content-main">
     <div class="contents">
         <h2>Contenidos</h2>
         <div class="row-image-desc">
@@ -32,6 +33,16 @@
         <h3 class="price descriptive-text">
             Precio: $1000
         </h3>
+    </div>
+    <div class="teachers">
+        <h2>Profesores</h2>
+        <div class="row-image-desc">
+            <img src="teach.jpg" class="picture">
+            <p class="long-desc descriptive-text">
+                Contarás con los mejores profesores del rubro directamente desde la Universidad Austral de Rosario.
+            </p>
+        </div>
+    </div>
     </div>
     </body>
 </html>
